<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_library">

    <fragment android:id="@+id/nav_library" android:name="com.musicchapa.ui.fragments.LibraryFragment" android:label="@string/library" />
    <fragment android:id="@+id/nav_youtube" android:name="com.musicchapa.ui.fragments.YoutubeFragment" android:label="@string/youtube" />
    <fragment android:id="@+id/nav_url" android:name="com.musicchapa.ui.fragments.UrlDownloadFragment" android:label="@string/url_download" />
    <fragment android:id="@+id/nav_settings" android:name="com.musicchapa.ui.fragments.SettingsFragment" android:label="@string/settings" />

</navigation>
